--- a/_posts/2021-02-23-cellchat.md
+++ b/_posts/2021-02-23-cellchat.md
@@ -14,6 +14,8 @@ GenPALS Seminar Presenter: Suoqin Jin
 
 Author of this page: Samuel Morabito
 
+Test pushing a random change
+
 ## Inference and analysis of cell-cell communication using CellChat
 
 
